2005-02-25  Dom Lachowicz <cinamod@hotmail.com>

	* *: Get rid of deprecated stuff.
	* configure.in: Bump version number
	
2005-02-25  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-paint-server.c: more de-artification of the core

2005-02-23  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-image.c: Fix bug #168182
	* test-display.c: rsvg-view now can view images on any medium that
	gnome-vfs can see.
	* *: Deprecate rsvg-gz. Move its functionality directly into RsvgHandle instead.
	Greatly simplifies much code.
	* rsvg-affine.c: Steal libart's matrix affine code
	* *: Use above instead of libart's matrix affine functions
	
2005-02-23  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-art-mask.c: new file with art specific masking stuff
	* rsvg-art-mask.h: see above
	* rsvg-paint-server.c: bug 155752
	
2005-02-18 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-structure.c: bug #167813

2005-2-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-paint-server.c: modified to allow patterns to be rendered on a 
	pixbuf of the exact nessisary size. Not Cairo based I know, but it
	needed to be done.
	* rsvg-styles.c: moved pretty much all libart dependant stuff out of RsvgState
	* rsvg-private.c: created a new function in RsvgRender: add_clipping_rect 
	which basically sets up a clipping viewport
	* rsvg-art-composite.c: broke clip paths in a hardcore way
	
2005-2-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-image.c: moved much of it's functionality to rsvg-art-draw.c 
	and rsvg-art-composite.c
	* rsvg-private.h: gave RsvgRender the ability to abstract the drawing
	of images
	* rsvg.c: created rsvg_render_image function
	
2005-2-15  Caleb Moore <c.moore@student.unsw.edu.au>	

	* rsvg-private.h: created RsvgRender structure.
	* rsvg.c: created functions to draw and composite that call apon the 
	render structure.
	* rsvg-art-render.c: created new file to create render structure using
	libart based routines, created a render structure for creating outlines