@@ -27,21 +27,40 @@
 #define RSVG_BPATH_UTIL_H
 
 #include <glib/gtypes.h>
-#include <libart_lgpl/art_bpath.h>
 
 G_BEGIN_DECLS
+
+typedef enum {
+  RSVG_MOVETO,
+  RSVG_MOVETO_OPEN,
+  RSVG_CURVETO,
+  RSVG_LINETO,
+  RSVG_END
+} RsvgPathcode;
+
+typedef struct _RsvgBpath RsvgBpath;
+struct _RsvgBpath {
+  /*< public >*/
+  RsvgPathcode code;
+  double x1;
+  double y1;
+  double x2;
+  double y2;
+  double x3;
+  double y3;
+};
 
 typedef struct _RsvgBpathDef RsvgBpathDef;
 
 struct _RsvgBpathDef {
-	ArtBpath *bpath;
+	RsvgBpath *bpath;
 	int n_bpath;
 	int n_bpath_max;
 	int moveto_idx;
 };
 
 RsvgBpathDef *rsvg_bpath_def_new (void);
-RsvgBpathDef *rsvg_bpath_def_new_from (ArtBpath *bpath);
+RsvgBpathDef *rsvg_bpath_def_new_from (RsvgBpath *bpath);
 
 void rsvg_bpath_def_free       (RsvgBpathDef *bpd);
 
